// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 1`] = `
"❯ [you]
  Read all source files
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 2`] = `
"❯ [you]
  Read all source files
⚙ Reading src/config.ts
⚙ Reading src/database.ts
⚙ Reading src/routes.ts
⚙ Reading src/middleware.ts
⚙ Reading src/utils.ts
⚙ Reading src/types.ts
⚙ Reading src/api.ts
⚙ Reading src/auth.ts
⚙ Reading src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 3`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Reading src/database.ts
⚙ Reading src/routes.ts
⚙ Reading src/middleware.ts
⚙ Reading src/utils.ts
⚙ Reading src/types.ts
⚙ Reading src/api.ts
⚙ Reading src/auth.ts
⚙ Reading src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 4`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Read src/database.ts
⚙ Reading src/routes.ts
⚙ Reading src/middleware.ts
⚙ Reading src/utils.ts
⚙ Reading src/types.ts
⚙ Reading src/api.ts
⚙ Reading src/auth.ts
⚙ Reading src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 5`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Read src/database.ts
⚙ Read src/routes.ts
⚙ Reading src/middleware.ts
⚙ Reading src/utils.ts
⚙ Reading src/types.ts
⚙ Reading src/api.ts
⚙ Reading src/auth.ts
⚙ Reading src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 6`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Read src/database.ts
⚙ Read src/routes.ts
⚙ Read src/middleware.ts
⚙ Reading src/utils.ts
⚙ Reading src/types.ts
⚙ Reading src/api.ts
⚙ Reading src/auth.ts
⚙ Reading src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 7`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Read src/database.ts
⚙ Read src/routes.ts
⚙ Read src/middleware.ts
⚙ Read src/utils.ts
⚙ Reading src/types.ts
⚙ Reading src/api.ts
⚙ Reading src/auth.ts
⚙ Reading src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 8`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Read src/database.ts
⚙ Read src/routes.ts
⚙ Read src/middleware.ts
⚙ Read src/utils.ts
⚙ Read src/types.ts
⚙ Reading src/api.ts
⚙ Reading src/auth.ts
⚙ Reading src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 9`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Read src/database.ts
⚙ Read src/routes.ts
⚙ Read src/middleware.ts
⚙ Read src/utils.ts
⚙ Read src/types.ts
⚙ Read src/api.ts
⚙ Reading src/auth.ts
⚙ Reading src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 10`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Read src/database.ts
⚙ Read src/routes.ts
⚙ Read src/middleware.ts
⚙ Read src/utils.ts
⚙ Read src/types.ts
⚙ Read src/api.ts
⚙ Read src/auth.ts
⚙ Reading src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 11`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Read src/database.ts
⚙ Read src/routes.ts
⚙ Read src/middleware.ts
⚙ Read src/utils.ts
⚙ Read src/types.ts
⚙ Read src/api.ts
⚙ Read src/auth.ts
⚙ Read src/logger.ts
⚙ Reading src/index.ts
"
`;

exports[`ChatDisplay - 10x file_read in one message altMode (results arrive one-by-one) > snapshot: user → all running → results arrive one-by-one → all done 12`] = `
"❯ [you]
  Read all source files
⚙ Read src/config.ts
⚙ Read src/database.ts
⚙ Read src/routes.ts
⚙ Read src/middleware.ts
⚙ Read src/utils.ts
⚙ Read src/types.ts
⚙ Read src/api.ts
⚙ Read src/auth.ts
⚙ Read src/logger.ts
⚙ Read src/index.ts
"
`;
